<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/contactUs"
        android:orderInCategory="100"
        android:title="@string/contactUs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/aboutUs"
        android:orderInCategory="100"
        android:title="@string/aboutUs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/aboutApp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/disclaimer"
        android:orderInCategory="100"
        android:title="@string/disclaimer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"
        />

</menu>