<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.izba.aspdata.ThankYou"
    android:background="@drawable/tile_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        >
        <View
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:background="#ffc107" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/header1"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#2979ff"
            />
        <View
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:background="#afb42b" />

        <TextView
            android:id="@+id/dispThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanksMessage"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#afb42b"/>

        <TextView
            android:id="@+id/textClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payumoney"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#2979ff"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/textRegards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regardsMessage"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#afb42b" />

    </LinearLayout>
</RelativeLayout>
